# IroomT

./: .env  .gitignore  README.md  build-core.sh  ecosystem.config.js  index.html  init-core.sh  notes.excalidraw  package-lock.json  package.json  start-kiosk.sh  web-page-style.excalidraw  web-socket.excalidraw
back/: index.js  mosquitto.conf  package-lock.json  package.json  publisher.js  seno.c
backend/: .env  .gitignore  package-lock.json  package.json  seno  server  server.c  server.js  server.out
backend/Core/: CMakeLists.txt  handle_data.c  handle_data.h  main  main.c
backend/Core/Drivers/: bacn_RF.c
backend/Core/JSON/: 0
backend/Core/Modules/: CS8toIQ.c  CS8toIQ.h  IQ.c  IQ.h  find_closest_index.c  find_closest_index.h  handle_web.c  handle_web.h  moda.c  moda.h  parameter.c  parameter.h  script_utils.c  script_utils.h  welch.c  welch.h
backend/Core/new/: main(old).c
backend/Core/new/Drivers(old)/: bacn_RF.c  bacn_RF.h
backend/Core/new/Modules(new)/: parameter.c  parameter.h
backend/Core/new/Modules(old)/: IQ.h  handle_web.c
backend/js/: handleCore.js  handleJSON.js  index.js  logJSON.js  socketHandler.js  tcpClient.js
backend/js/json/: 0  params needed
common/: path_handler.js
docs/: notes.excalidraw  web-socket.excalidraw
front/: package-lock.json  package.json  vite.config.ts
front/src/: App.tsx
front/src/components/: Header.tsx  Heatmap.tsx
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  BackendConnect.css  BackendConnect.jsx  SocketContext.jsx  SocketJSON.jsx  index.css  main.jsx
frontend/src/components/: Header.css  Header.jsx  Heatmap.jsx  InfoPlot.css  InfoPlot.jsx  Plot.css  Plot.jsx  PlotlyC.jsx  PlotlyHeat.jsx  PlotlyLine.jsx  UserControl.css  UserControl.jsx  UserControls.css  UserControls.jsx
src/: App.css  App.tsx  index.css  main.tsx
src/assets/: Heatmap.css  Heatmap.tsx  Plot.css  Plot.tsx
src/components/: Header.tsx  Heatmap.css  Heatmap.tsx  InfoPlot.css  InfoPlot.tsx  Plot.css  Plot.tsx
vscode-config-debugging/: settings.json  tasks.json  test.txt
